--- a/Themes/DarkTheme.xaml
+++ b/Themes/DarkTheme.xaml
@@ -424,7 +424,7 @@
     <Style TargetType="{x:Type CheckBox}">
         <Setter Property="MinHeight" Value="16"/>
         <Setter Property="Height" Value="20"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        <!--<Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>-->
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="#6fffffff"/>
         <Setter Property="Foreground" Value="{StaticResource ControlDefaultForeground}"/>
@@ -459,7 +459,7 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="HasContent" Value="true">
-                            <Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>
+                            <!--<Setter Property="FocusVisualStyle" Value="{StaticResource OptionMarkFocusVisual}"/>-->
                             <Setter Property="Padding" Value="4,-1,0,0"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
