--- a/Dialogs/UpdateDialog.xaml
+++ b/Dialogs/UpdateDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DyviniaUtils.Dialogs"
         mc:Ignorable="d"
-        Title="Update" Width="400" SizeToContent="Height" UseLayoutRounding="True"
+        Title="Update" Width="420" SizeToContent="Height" UseLayoutRounding="True"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         Style="{DynamicResource CustomWindowStyle}">
@@ -24,17 +24,18 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="44"/>
+                <RowDefinition Height="6"/>
             </Grid.RowDefinitions>
             <Border Grid.Row="1" Padding="6 2" Margin="6 0">
                 <StackPanel>
-                    <TextBlock x:Name="Header" Text="Update" FontSize="24" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" Margin="0 -4 0 2"/>
+                    <TextBlock x:Name="Header" Text="Update" FontSize="24" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" Margin="0 0 0 2"/>
                     <Border BorderThickness="1" BorderBrush="{StaticResource ContainerBorder}">
                         <WebBrowser x:Name="Browser" Visibility="Hidden" RenderOptions.BitmapScalingMode="Fant" TextOptions.TextRenderingMode="ClearType" Navigating="Browser_Navigating" LoadCompleted="Browser_LoadCompleted" Height="200"/>
                     </Border>
                 </StackPanel>
             </Border>
 
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2" Margin="7 0">
                 <Button x:Name="InstallButton" Content="Install Update" Width="110" HorizontalAlignment="Right" Margin="0,5,5,5" FontSize="15" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" />
                 <Button x:Name="WebpageButton" Content="Open GitHub" Width="100" HorizontalAlignment="Right" Margin="0,5,5,5" FontSize="15" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" />
                 <Button x:Name="IgnoreButton" Content="Ignore" Width="70" HorizontalAlignment="Right" Margin="0,5,5,5" FontSize="15" FontFamily="/Fonts/Univers.ttf #Linotype Univers 520 CnMedium" />
